; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/gx/gui/extr_menu.c_update_screen_w.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/gx/gui/extr_menu.c_update_screen_w.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i32, i32 }

@config = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@vmode = common dso_local global %struct.TYPE_4__* null, align 8
@VI_MAX_WIDTH_NTSC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @update_screen_w to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @update_screen_w() #0 {
  %1 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @config, i32 0, i32 0), align 4
  %2 = load %struct.TYPE_4__*, %struct.TYPE_4__** @vmode, align 8
  %3 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  store i32 %1, i32* %3, align 4
  %4 = load i32, i32* @VI_MAX_WIDTH_NTSC, align 4
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @config, i32 0, i32 0), align 4
  %6 = sub nsw i32 %4, %5
  %7 = sdiv i32 %6, 2
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** @vmode, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 4
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** @vmode, align 8
  %11 = call i32 @VIDEO_Configure(%struct.TYPE_4__* %10)
  %12 = call i32 (...) @VIDEO_Flush()
  ret void
}

declare dso_local i32 @VIDEO_Configure(%struct.TYPE_4__*) #1

declare dso_local i32 @VIDEO_Flush(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
